clusters/lovenet/core/network/traefik/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: network
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "network-rfc1918-ips@kubernetescrd"
spec:
  ingressClassName: "traefik"

  rules:
    - host: &host "traefik.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000

  tls:
    - hosts:
        - *host
